# http4r

./: Cargo.toml  Procfile  README.md  run
http4r-browser/: Cargo.toml
http4r-browser/src/: browser_example.rs  lib.rs  main.rs  router.rs
http4r-browser/tests/: browser-test.html  browser-test.js  router_test.rs
http4r-core/: Cargo.toml  README.md
http4r-core/doc/: .rustc_info.json  .rustdoc_fingerprint.json
http4r-core/doc/doc/: crates.js  search-index.js  settings.html  source-files.js
http4r-core/doc/doc/adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
http4r-core/doc/doc/aho_corasick/: all.html  enum.ErrorKind.html  enum.MatchKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html  trait.StateID.html
http4r-core/doc/doc/alloc_no_stdlib/: all.html  enum.AllocatorC.html  fn.bzero.html  fn.uninitialized.html  index.html  macro.bind_global_buffers_to_allocator.html  macro.declare_stack_allocator_struct.html  macro.define_allocator_memory_pool.html  macro.define_index_ops.html  macro.define_index_ops_mut.html  macro.static_array.html  (+8 more)
http4r-core/src/: client.rs  codex.rs  headers.rs  http_message.rs  lib.rs  logging_handler.rs  main.rs  pool.rs  query.rs  redirect_to_https_handler.rs  server.rs  uri.rs
http4r-core/tests/: body_semantics_test.rs  client_test.rs  codex_test.rs  content_encoding_test.rs  headers_test.rs  http_content_length_header_test.rs  http_test.rs  http_transfer_encoding_header_test.rs  httpmessage_test.rs  query_test.rs  uri_test.rs
http4r-core/tests/common/: mod.rs
(+4095 files in other folders)
