[package]
name = "http4r-core"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Simple, synchronous, symmetric client and server as a function"
homepage = "https://http4r.com/"
documentation = "https://htt4p4r.com/docs"
repository = "https://github.com/TomShacham/http4r"
readme = "README.md"
keywords = ["web", "http", "server", "client", "synchronous"]
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.5.4"
flate2 = "1.0.22"
brotli = "3.3.3"
